--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+## Data source configuration (In-memory)
+#spring.datasource.url=jdbc:h2:mem:ecommerce
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#
+#spring.jpa.hibernate.ddl-auto=create-drop
+#
+## Enable H2 console on http://localhost:8080/h2-console
+#spring.h2.console.enabled=true
 
+server.port=8080
+server.error.include-message= always
+
+spring.application.name= e-commerce
+spring.datasource.username= dbt
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.password= password
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.show-sql=true
+
+logging.level.com.dbt= DEBUG
