Updated api responses and added 'TODO' notes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-## Data source configuration (In-memory)
+server.port=8080
+server.error.include-message= always
+
+## TODO: Data source configuration (In-memory)
 #spring.datasource.url=jdbc:h2:mem:ecommerce
 #spring.datasource.username=sa
 #spring.datasource.password=
@@ -9,8 +12,7 @@
 ## Enable H2 console on http://localhost:8080/h2-console
 #spring.h2.console.enabled=true
 
-server.port=8080
-server.error.include-message= always
+## Data source config (PostgreSQL)
 
 spring.application.name= e-commerce
 spring.datasource.username= dbt
